--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -22,16 +22,19 @@ target_link_libraries(request-sd ${VSOMEIP_NAME} ${Boost_LIBRARIES} ${DL_LIBRARY
 add_executable(response-sample response-sample.cpp ${EXAMPLE_CONFIG_FILES})
 target_link_libraries(response-sample ${VSOMEIP_NAME} ${Boost_LIBRARIES} ${DL_LIBRARY})
 
+add_executable(response-sd response-sd.cpp ${EXAMPLE_CONFIG_FILES})
+target_link_libraries(response-sd ${VSOMEIP_NAME} ${Boost_LIBRARIES} ${DL_LIBRARY})
+
 add_executable(subscribe-sample subscribe-sample.cpp ${EXAMPLE_CONFIG_FILES})
 target_link_libraries(subscribe-sample ${VSOMEIP_NAME} ${Boost_LIBRARIES} ${DL_LIBRARY})
 
 add_executable(notify-sample notify-sample.cpp ${EXAMPLE_CONFIG_FILES})
 target_link_libraries(notify-sample ${VSOMEIP_NAME} ${Boost_LIBRARIES} ${DL_LIBRARY})
 
-add_dependencies(examples request-sample response-sample subscribe-sample notify-sample request-sd)
+add_dependencies(examples request-sample response-sample subscribe-sample notify-sample request-sd response-sd)
 
 install (
-    TARGETS request-sample response-sample subscribe-sample notify-sample request-sd
+    TARGETS request-sample response-sample subscribe-sample notify-sample request-sd response-sd
     RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
 )
 
